# FileTool

./: CMakeLists.txt
.github/workflows/: cmake-linux-ubuntu-build.yml  cmake-windows-build.yml
src/App/: CMakeLists.txt
src/App/include/: config.h.in  config.hpp
src/App/src/: main.cpp
src/FileInfoLib/: CMakeLists.txt
src/FileInfoLib/include/: DirectoryInfo.hpp  FileInfo.hpp  FileInfoAPI.hpp  PathInfo.hpp  PathUtils.hpp
src/FileInfoLib/src/: DirectoryInfo.cpp  FileInfo.cpp  PathInfo.cpp  PathUtils.cpp
src/FileOpsLib/: CMakeLists.txt
src/FileOpsLib/include/: DirectoryOps.hpp  FileOps.hpp  FileOpsAPI.hpp  PathOps.hpp
src/FileOpsLib/src/: DirectoryOps.cpp  FileOps.cpp  PathOps.cpp
src/Tests/: CMakeLists.txt
src/Tests/src/: main.cpp
